修改了视频播放器

--- a/videoplayer/index.html
+++ b/videoplayer/index.html
@@ -12,7 +12,7 @@
 		<div class="box">
 			<div class="boxLeft">
 				<div class="videoBox">
-					<video width="600"  src="video/jq22.mp4"   ></video>
+					<video width="600"  src="video/jq22.mp4"  id="vio" loop></video>
 					<!--标题-->
 					<div class="headtitle">BBC大型纪录片:地球脉动</div>
 					<!--进度条-->
@@ -27,7 +27,7 @@
 							<!--前进-->
 							<div><i class="iconfont icon-headway"></i></div>
 							<!--暂停-->
-							<div><i class="iconfont icon-player-play"></i></div>
+							<div><i class="iconfont icon-player-play" id="playbtn"></i></div>
 							<!--后退-->
 							<div><i class="iconfont icon-headway1"></i></div>
 						</div>
@@ -35,29 +35,15 @@
 							<div class="volleft"><i class="iconfont icon-shengyin"></i></div>
 							<div class="volBar"><div class="volWid"><div class="volCircle"></div></div></div>
 						</div>
-						<div >
-							<span>00:00:00</span>
+						<div class="videotime">
+							<span class="span1">00:00:00</span>
 							<span>/</span>
-							<span>00:23:00</span>
+							<span class="span2">00:00:00</span>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="boxRight">
-				<div class="rightHeader">纪录片</div>	
-				<ul class="rightlist">
-					<li>
-						<div class="div1">1</div>
-						<div class="div2">
-							<div class="divimg"><img src="img/1483941890452656@800_534.jpeg" /></div>
-							<div class="infobox">
-								<p class="p1">BBC年度大作</p>
-								<p class="p2">地球脉动第3季第1集</p>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
+			
 		</div>
 	</body>
 </html>
